<resources>
    <string name="app_name">Memorization</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="no_folders_message">You haven\'t created any folders yet</string>
    <string name="folders_list">Folders List</string>
    <string name="add_folder">Add folder</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_folder">Create Folder</string>
    <string name="error_icon">Error Icon</string>
    <string name="please_fill_the_field">Please, fill the field</string>
    <string name="operation_failed">Operation failed</string>
    <string name="create_folder_dialog">Create Folder Dialog</string>
    <string name="folder_dialog_input">Folder dialog input field</string>
    <string name="folder_icon">Folder Icon</string>
    <string name="no_flash_cards_message">You haven\'t created any flash cards yet</string>
    <string name="flash_cards_list">Flash Cards list</string>
    <string name="create_flash_card_dialog">CreateFlashCardDialog</string>
    <string name="question_input_field">QuestionInputField</string>
    <string name="create_flash_card">Create Flash Card</string>
    <string name="answer_input_field">AnswerInputField</string>
    <string name="answer">Answer</string>
    <string name="question">Question</string>
    <string name="add_flash_card">Add Flash Card</string>
    <string name="close_sheet">Close BottomSheet</string>
    <string name="flash_card_details_sheet">FlashCardDetailsSheet</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="edit_flash_card">Edit Flash Card</string>
    <string name="options_menu_icon">Options menu icon</string>
    <string name="folder_name">Folder Name</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="show_answer_button">Show answer button</string>
    <string name="show_answer">Show Answer</string>
    <string name="hide_answer">Hide Answer</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="what_is_your_memorization_level">What is your memorization level?</string>
    <string name="failed_to_initialize_practice">We encountered an issue while initializing practice for you. Try again later!</string>
    <string name="go_back">Go Back</string>
    <string name="no_flash_cards_for_practice">No Flash Cards found for the practice.</string>
    <string name="practice_finished_message">Congratulations!!! You have completed the practice.</string>
    <string name="practice">Practice</string>
</resources>